tests/ui/macros/vec-macro-in-pattern.stderr
error[E0532]: expected a pattern, found a function call
  --> $DIR/vec-macro-in-pattern.rs:7:14
   |
LL |         Some(vec![43]) => {}
   |              ^^^^^^^^ not a tuple struct or tuple variant
   |
   = note: function calls are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0164]: expected tuple struct or tuple variant, found associated function `<[_]>::into_vec`
  --> $DIR/vec-macro-in-pattern.rs:7:14
   |
LL |         Some(vec![43]) => {}
   |              ^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch19-00-patterns.html
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0164, E0532.
For more information about an error, try `rustc --explain E0164`.
